yaml/menu/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu-aggregator
  namespace: coffee-menu
spec:
  selector:
    matchLabels:
      name: menu-aggregator
  replicas: 1
  template:
    metadata:
      labels:
        name: menu-aggregator
        version: 20.10.22
    spec:
      containers:
        - name: menu-frontend
          image: scilifelabdatacentre/menu-frontend:latest
          resources:
            limits:
              cpu: 500m
              memory: 100Mi
            requests:
              cpu: 200m
              memory: 60Mi
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              scheme: HTTP
              port: 80
        - name: menu-backend
          image: scilifelabdatacentre/menu-backend:latest
          resources:
            limits:
              cpu: 800m
              memory: 100Mi
            requests:
              cpu: 500m
              memory: 100Mi
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /api/
              scheme: HTTP
              port: 8000
