yaml/menu/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: menu-aggregator
  labels:
    name: menu-aggregator
  namespace: coffee-menu
spec:
  ports:
    - name: frontend
      port: 80
      targetPort: 80
    - name: backend
      port: 8000
      targetPort: 8000
  selector:
    name: menu-aggregator
