yaml/menu/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: menu-aggregator
  namespace: coffee-menu
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
spec:
  tls:
  - hosts:
    - coffee-menu.dckube.scilifelab.se
    secretName: menu-aggregator-tls
  rules:
    - host: coffee-menu.dckube.scilifelab.se
      http:
        paths:
          - path: /api/
            backend:
              serviceName: menu-aggregator
              servicePort: 8000
          - path: /
            backend:
              serviceName: menu-aggregator
              servicePort: 80
